fix(tree-select): fix icon and text align style error #INFR-3004

--- a/src/shared/option/styles/option.mixin.scss
+++ b/src/shared/option/styles/option.mixin.scss
@@ -26,7 +26,6 @@ $option-disabled-color: variables.$gray-400 !default;
     // use in tree-select
     .prefix-icon {
         color: variables.$gray-500;
-        vertical-align: -1px;
     }
 
     &:not(.disabled) {
